--- a/Concurso_VagaCerta/public/VagaCerta/pom.xml
+++ b/Concurso_VagaCerta/public/VagaCerta/pom.xml
@@ -60,6 +60,13 @@
     <artifactId>logback-classic</artifactId>
     <version>1.4.5</version>
 </dependency>
+
+  <dependency>
+    <groupId>com.google.code.gson</groupId>
+    <artifactId>gson</artifactId>
+    <version>2.10.1</version>
+  </dependency>
+
   </dependencies>
 
   <build>
