--- a/VagaCerta/pom.xml
+++ b/VagaCerta/pom.xml
@@ -16,6 +16,14 @@
     <maven.compiler.release>17</maven.compiler.release>
   </properties>
 
+	  <repositories>
+  <repository>
+    <id>azure-sdk</id>
+    <name>Azure SDK</name>
+    <url>https://pkgs.dev.azure.com/azure-sdk/public/_packaging/azure-sdk-for-java/maven/v1</url>
+  </repository>
+</repositories>
+
   <dependencyManagement>
     <dependencies>
       <dependency>
@@ -55,6 +63,23 @@
     <artifactId>slf4j-api</artifactId>
     <version>2.0.17</version>
 	</dependency>
+ <!-- //Sistema inteligente depedencias-->
+ <dependency>
+      <groupId>com.azure</groupId>
+      <artifactId>azure-ai-vision-imageanalysis</artifactId>
+      <version>1.0.0-beta.2</version>
+    </dependency>
+        <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-nop</artifactId>
+      <version>1.7.36</version>
+    </dependency>
+    <dependency>
+        <groupId>com.azure</groupId>
+        <artifactId>azure-core</artifactId>
+        <version>1.49.0</version>
+    </dependency>
+<!--Sistema inteligente depedencias//-->
 	<dependency>
     <groupId>ch.qos.logback</groupId>
     <artifactId>logback-classic</artifactId>
